--- a/Forward_propagation.ipynb
+++ b/Forward_propagation.ipynb
@@ -69,31 +69,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Dec  6 19:20:32 2021       \r\n",
-      "+-----------------------------------------------------------------------------+\r\n",
-      "| NVIDIA-SMI 470.86       Driver Version: 470.86       CUDA Version: 11.4     |\r\n",
-      "|-------------------------------+----------------------+----------------------+\r\n",
-      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\r\n",
-      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\r\n",
-      "|                               |                      |               MIG M. |\r\n",
-      "|===============================+======================+======================|\r\n",
-      "|   0  NVIDIA GeForce ...  Off  | 00000000:0A:00.0  On |                  N/A |\r\n",
-      "| 50%   37C    P0    88W / 320W |   1731MiB / 10014MiB |     17%      Default |\r\n",
-      "|                               |                      |                  N/A |\r\n",
-      "+-------------------------------+----------------------+----------------------+\r\n",
-      "                                                                               \r\n",
-      "+-----------------------------------------------------------------------------+\r\n",
-      "| Processes:                                                                  |\r\n",
-      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\r\n",
-      "|        ID   ID                                                   Usage      |\r\n",
-      "|=============================================================================|\r\n",
-      "|    0   N/A  N/A      1297      G   /usr/lib/xorg/Xorg                150MiB |\r\n",
-      "|    0   N/A  N/A      2215      G   /usr/lib/xorg/Xorg               1123MiB |\r\n",
-      "|    0   N/A  N/A      2404      G   /usr/bin/gnome-shell              121MiB |\r\n",
-      "|    0   N/A  N/A    292038      G   .../debug.log --shared-files      106MiB |\r\n",
-      "|    0   N/A  N/A    344233      G   ...AAAAAAAAA= --shared-files       63MiB |\r\n",
-      "|    0   N/A  N/A    361156      G   ...AAAAAAAAA= --shared-files      147MiB |\r\n",
-      "+-----------------------------------------------------------------------------+\r\n"
+      "Mon Dec  6 19:20:32 2021       \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 470.86       Driver Version: 470.86       CUDA Version: 11.4     |\n",
+      "|-------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                               |                      |               MIG M. |\n",
+      "|===============================+======================+======================|\n",
+      "|   0  NVIDIA GeForce ...  Off  | 00000000:0A:00.0  On |                  N/A |\n",
+      "| 50%   37C    P0    88W / 320W |   1731MiB / 10014MiB |     17%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "                                                                               \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| Processes:                                                                  |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+      "|        ID   ID                                                   Usage      |\n",
+      "|=============================================================================|\n",
+      "|    0   N/A  N/A      1297      G   /usr/lib/xorg/Xorg                150MiB |\n",
+      "|    0   N/A  N/A      2215      G   /usr/lib/xorg/Xorg               1123MiB |\n",
+      "|    0   N/A  N/A      2404      G   /usr/bin/gnome-shell              121MiB |\n",
+      "|    0   N/A  N/A    292038      G   .../debug.log --shared-files      106MiB |\n",
+      "|    0   N/A  N/A    344233      G   ...AAAAAAAAA= --shared-files       63MiB |\n",
+      "|    0   N/A  N/A    361156      G   ...AAAAAAAAA= --shared-files      147MiB |\n",
+      "+-----------------------------------------------------------------------------+\n"
      ]
     }
    ],
@@ -1017,15 +1017,6 @@
    },
    "source": [
     "### Precision / recall curve"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "b77PbNHEClCc"
-   },
-   "source": [
-    "![image.png](attachment:b1ea9fe5-eea3-4b7e-a912-b82e06157c0a.png)"
    ]
   },
   {
