new changes to model training pipeline, corrections

--- a/Forward_propagation.ipynb
+++ b/Forward_propagation.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -42,7 +42,7 @@
        "device(type='cuda')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,14 +52,13 @@
     "import importlib\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
-    "\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "device"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -72,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Dec 16 15:07:11 2021       \n",
+      "Thu Dec 16 23:33:01 2021       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 470.86       Driver Version: 470.86       CUDA Version: 11.4     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -81,7 +80,7 @@
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
       "|   0  NVIDIA GeForce ...  Off  | 00000000:0A:00.0  On |                  N/A |\n",
-      "| 50%   37C    P0    88W / 320W |    897MiB / 10014MiB |     15%      Default |\n",
+      "| 50%   38C    P0    88W / 320W |   9924MiB / 10014MiB |      0%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -91,9 +90,12 @@
       "|        ID   ID                                                   Usage      |\n",
       "|=============================================================================|\n",
       "|    0   N/A  N/A      1153      G   /usr/lib/xorg/Xorg                150MiB |\n",
-      "|    0   N/A  N/A      2147      G   /usr/lib/xorg/Xorg                637MiB |\n",
-      "|    0   N/A  N/A      2324      G   /usr/bin/gnome-shell               82MiB |\n",
+      "|    0   N/A  N/A      2147      G   /usr/lib/xorg/Xorg                768MiB |\n",
+      "|    0   N/A  N/A      2324      G   /usr/bin/gnome-shell               84MiB |\n",
       "|    0   N/A  N/A     12892      G   .../debug.log --shared-files        8MiB |\n",
+      "|    0   N/A  N/A     63346      G   ...AAAAAAAAA= --shared-files      145MiB |\n",
+      "|    0   N/A  N/A     66169      G   ...AAAAAAAAA= --shared-files       35MiB |\n",
+      "|    0   N/A  N/A     79449      C   ...nda3/envs/yolo/bin/python     8711MiB |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     }
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {
     "id": "xdTGWaDAURAY"
    },
@@ -130,23 +132,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mbindas1\u001b[0m (use `wandb login --relogin` to force relogin)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -213,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "id": "PsXPfSMgxoOO"
    },
@@ -236,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -334,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -371,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +380,7 @@
        " (84.0, 96.0, 376.1333333333333, 413.53846153846155, 5.0)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {
     "id": "JfhHm6EZxoOP"
    },
@@ -457,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
